--- a/sosservice/pom.xml
+++ b/sosservice/pom.xml
@@ -56,6 +56,11 @@
 			<artifactId>spring-boot-starter-redis</artifactId>
 			<version>1.4.4.RELEASE</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
